upgpkg: mediathekview 13.6.0-2: Rebuild to fix issue with start script (FS#67630).
git-svn-id: file:///srv/repos/svn-community/svn@684907 9fca08f4-af9d-4005-b8df-a31f2cc04f65