@@ -1,4 +1,5 @@
 #!/usr/bin/env sh
 
 PATH="/usr/lib/jvm/java-14-openjdk/bin:${PATH}"
-java -jar /usr/share/java/mediathekview/MediathekView.jar "$@"
+# requires preview features: https://github.com/mediathekview/MediathekView/issues/528
+java -jar --enable-preview /usr/share/java/mediathekview/MediathekView.jar "$@"
